--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>school website</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
+<!--font awesome link for icons-->
+<link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+          crossorigin="anonymous">
 </head>
 
 <!--body begins-->
@@ -101,7 +106,7 @@
     discuss and learn together every day.
   </p>
 
-   <div class="row">
+  <div class="row">
     <div class="campus-col">
       <img src="img/london.png" alt="">
       <div class="layer">
@@ -122,6 +127,132 @@
     </div>
   </div>
 </section>
+
+
+
+
+
+
+
+<!--facities section-->
+
+<section class="facilities">
+  <h1>Our Facilities</h1>
+  <p>From sports facilities to teaching spaces and laboratories,
+    we're investing in our facilities to improve the experience we deliver to our students.
+  </p>
+
+  <!--adding columns for the images-->
+  <div class="row">
+    <div class="facilities-col">
+      <img src="img/library.png" alt="">
+      <h3>Our Library</h3>
+      <p>Our  library system consists of fourteen libraries across its colleges, schools, institutes and campuses.
+        Library users are free to access and use these libraries for their academic work.
+        Book loans services are available in all our libraries.
+        The Mahatma Gandhi Graduate Library which was opened recently is 
+        accessible to graduate (Ph.D and Masters) students and Academic staff.
+      </p>
+    </div>
+    <div class="facilities-col">
+      <img src="img/basketball.png" alt="">
+      <h3>Our Basketball Ground</h3>
+      <p>Our basketball ground is a hub of activity for our students.
+        Whether you're a seasoned player or just looking to have some fun,
+        our well-maintained basketball facilities are here for you. 
+        Join in on pick-up games, shoot some hoops, or even participate in 
+        organized basketball events. It's not just about physical activity; 
+        it's about building friendships and teamwork. 
+        Come and enjoy the thrill of the game at our basketball ground!"
+      </p>
+    </div>
+    <div class="facilities-col">
+      <img src="img/cafeteria.png" alt="">
+      <h3>Our Cafeteria</h3>
+      <p>Our cafeteria is more than just a place to grab a quick bite. 
+        It's a central gathering spot for students, faculty, and staff to connect, 
+        refuel, and relax. With a diverse menu of delicious and healthy options, 
+        there's something for everyone. Whether you're seeking a quick coffee between classes 
+        or a leisurely meal with friends, our cafeteria has you covered. It's a space to unwind, 
+        share stories, and fuel your day with good food and good company
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+<!--testimonials sections from  previous students-->
+<section class="testimonials">
+  <h1>Testimonials</h1>
+  <p>These are encouraging words from some of our students</p>
+
+  <div class="row">
+<div class="testimonial-col">
+  <img src="img/user1.jpg" alt="">
+  <div>
+    <p>Thanks to the flexible online programs, I was able to earn my degree while working full-time. I'm now equipped with the knowledge and skills to advance my career.</p>
+    <h3>Lorraine Mark</h3>
+    <!--rating star icons-->
+    <i class="fa fa-star" aria-hidden="true"></i>
+    <i class="fa fa-star" aria-hidden="true"></i>
+    <i class="fa fa-star" aria-hidden="true"></i>
+    <i class="fa fa-star" aria-hidden="true"></i>
+    <i class="fa fa-star"></i>
+  </div>
+</div>
+<div class="testimonial-col">
+  <img src="img/M1.jpg" alt="">
+  <div>
+    <p>Enrolling in this online university was one of the best decisions I've ever made. I got a promotion at work just months after completing my online degree.</p>
+    <h3>Mike Washington</h3>
+<i class="fa fa-star" aria-hidden="true"></i>
+<i class="fa fa-star" aria-hidden="true"></i>
+<i class="fa fa-star" aria-hidden="true"></i>
+<i class="fa fa-star" aria-hidden="true"></i>
+<i class="fa fa-star"></i>
+  </div>
+</div>
+
+</div>
+</section>
+
+
+
+
+
+
+<!--enroll section-->
+<section class="cta">
+<h1>Enroll For Various online courses</h1>
+<a href="" class="hero-btn">CONTACT US </a>
+</section>
+
+
+
+
+
+
+<!--footer section, end of page-->
+
+<section class="footer">
+  <h4>About Us</h4>
+  <p>
+    With a legacy spanning over a century, University of Newyork
+     has consistently set high standards for academic achievement and research.<br>
+     We take pride in our world-class faculty, cutting-edge research centers, 
+     and an unwavering commitment to the pursuit of knowledge.
+  </p>
+  <div class="icons">
+    <!--facebook, twitter , socials icons add them-->
+  </div>
+</section>
+
+
+
 
 
 
