--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </svg>
 
         <ul>
-          <li><a href="">HOME</a></li>
-          <li><a href="">ABOUT</a></li>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="about.html">ABOUT</a></li>
           <li><a href="">COURSE</a></li>
           <li><a href="">BLOG</a></li>
           <li><a href="">CONTACT</a></li>
@@ -49,7 +49,7 @@
         to pursue their passions and interests.
       </p>
 <!--link for visit us is inside the div-->
-      <a href="" class="hero-btn">Visit Us To Know More</a><!--provides a link to the website-->
+      <a href="about.html" class="hero-btn">Visit Us To Know More</a><!--provides a link to the website-->
     </div>
   </section>
 
