--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <section class="about-us">
 <div class="row">
   <div class="about-col">
-    <h1>Welcome to University Of Newyork</h1>
+    <h1><em>Welcome to University Of Newyork</h1></em>
     <p>Our mission is to revolutionize education by harnessing the power of online learning. 
       We envision a world where education knows no boundaries, where every learner 
       has the opportunity to pursue knowledge, skills, and personal growth, 
