--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
         <ul>
           <li><a href="index.html">HOME</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="">COURSE</a></li>
-          <li><a href="">BLOG</a></li>
-          <li><a href="">CONTACT</a></li>
+          <li><a href="course.html">COURSE</a></li>
+          <li><a href="blog.html">BLOG</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
         </ul>
       </div>
 <!--menu icon-->
@@ -53,7 +53,7 @@
       has the opportunity to pursue knowledge, skills, and personal growth, 
       regardless of their location or circumstances
     </p>
-    <a href="index.html" class="hero-btn red-btn">EXPLORE OUR COURSES</a>
+    <a href="course.html" class="hero-btn red-btn">EXPLORE OUR COURSES</a>
   </div>
 
     <div class="about-col">
