--- a/course.html
+++ b/course.html
@@ -19,7 +19,7 @@
 
 
   <!--header section-->
-  <section class="header">
+  <section class="sub-header">
     <!--adding a nav to contain the logo and links like about, home-->
     <nav>
       <a href="index.html"><img src="img/logo.png" alt="logo"></a>
@@ -40,20 +40,8 @@
 <!--menu icon-->
 <svg xmlns="http://www.w3.org/2000/svg" onclick="showMenu()" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="18" x2="21" y2="18"/></svg>
     </nav><!--nav ends here-->
-    <!--creating another div for content in this page-->
-    <div class="text-box">
-      <h1>University of Newyork</h1>
-      <p>This university offers a wide range of undergraduate,
-        postgraduate, and doctoral programs across various 
-        disciplines, <br>providing students with the opportunity
-        to pursue their passions and interests.
-      </p>
-<!--link for visit us is inside the div-->
-      <a href="course.html" class="hero-btn">Visit Us To Know More</a><!--provides a link to the website-->
-    </div>
+    <h1>Our Courses</h1>
   </section>
-
-
 
 
 
@@ -93,49 +81,14 @@
 
       </div>
     </div>
-  </section> 
-
-
-
-
-
-<!--campus section-->
-<section class="campus">
-  <h1>Our Global Campus</h1>
-  <p>Our Global Campus connects students around the world to collaborate,
-    discuss and learn together every day.
-  </p>
-
-  <div class="row">
-    <div class="campus-col">
-      <img src="img/london.png" alt="">
-      <div class="layer">
-        <h3>LONDON</h3>
-      </div>
-    </div>
-        <div class="campus-col">
-      <img src="img/newyork.png" alt="">
-      <div class="layer">
-        <h3>NEW YORK</h3>
-      </div>
-    </div>
-        <div class="campus-col">
-      <img src="img/washington.png" alt="">
-      <div class="layer">
-        <h3>WASHINGTON</h3>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
 
 
 
 
 
 
-
-<!--facities section-->
-
+<!--facilities-->
 <section class="facilities">
   <h1>Our Facilities</h1>
   <p>From sports facilities to teaching spaces and laboratories,
@@ -184,58 +137,6 @@
 
 
 
-
-<!--testimonials sections from  previous students-->
-<section class="testimonials">
-  <h1>Testimonials</h1>
-  <p>These are encouraging words from some of our students</p>
-
-  <div class="row">
-<div class="testimonial-col">
-  <img src="img/user1.jpg" alt="">
-  <div>
-    <p>Thanks to the flexible online programs, I was able to earn my degree while working full-time. I'm now equipped with the knowledge and skills to advance my career.</p>
-    <h3>Lorraine Mark</h3>
-    <!--rating star icons-->
-    <i class="fa fa-star" aria-hidden="true"></i>
-    <i class="fa fa-star" aria-hidden="true"></i>
-    <i class="fa fa-star" aria-hidden="true"></i>
-    <i class="fa fa-star" aria-hidden="true"></i>
-    <i class="fa fa-star"></i>
-  </div>
-</div>
-<div class="testimonial-col">
-  <img src="img/M1.jpg" alt="">
-  <div>
-    <p>Enrolling in this online university was one of the best decisions I've ever made. I got a promotion at work just months after completing my online degree.</p>
-    <h3>Mike Washington</h3>
-<i class="fa fa-star" aria-hidden="true"></i>
-<i class="fa fa-star" aria-hidden="true"></i>
-<i class="fa fa-star" aria-hidden="true"></i>
-<i class="fa fa-star" aria-hidden="true"></i>
-<i class="fa fa-star"></i>
-  </div>
-</div>
-
-</div>
-</section>
-
-
-
-
-
-
-<!--enroll section-->
-<section class="cta">
-<h1>Enroll For Various online courses</h1>
-<a href="contact.html" class="hero-btn">CONTACT US </a>
-</section>
-
-
-
-
-
-
 <!--footer section, end of page-->
 
 <section class="footer">
@@ -246,9 +147,6 @@
      We take pride in our world-class faculty, cutting-edge research centers, 
      and an unwavering commitment to the pursuit of knowledge.
   </p>
-  <div class="icons">
-    <!--facebook, twitter , socials icons add them-->
-  </div>
 </section>
 
 
@@ -266,5 +164,6 @@
       navLinks.style.right = "-200px";
     }
   </script>
+
 </body>
 </html>
