--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
 <!--font awesome link for icons-->
-<link rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-          crossorigin="anonymous">
+<!--font awesome link for icons must include this kit to prevent blank icons-->
+<script src="https://kit.fontawesome.com/d7accf2a63.js" crossorigin="anonymous"></script>
 </head>
 
 <!--body begins-->
@@ -92,27 +90,27 @@
     <h3>Postgraduate</h3>
     <div>
       <span>Business Analytics</span>
-      <span>20</span>
+      <span>2 years</span>
     </div>
 
         <div>
       <span>Data Science</span>
-      <span>18</span>
+      <span>3 years</span>
     </div>
 
         <div>
       <span>Computer Science</span>
-      <span>22</span>
+      <span>4 years</span>
     </div>
 
         <div>
       <span>Machine Learning</span>
-      <span>28</span>
+      <span>2 years</span>
     </div>
 
         <div>
       <span>Business Managment</span>
-      <span>30</span>
+      <span>2 years</span>
     </div>
 
 
@@ -141,6 +139,16 @@
      We take pride in our world-class faculty, cutting-edge research centers, 
      and an unwavering commitment to the pursuit of knowledge.
   </p>
+       <br>
+     <p>Connect with us on:</p>
+  </p>
+  <div>
+    <i class="fa-brands fa-square-instagram"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-whatsapp"></i>
+  </div>
+  <p><em>Made with<i class="fa-solid fa-heart"></i>by Sumaya Ahmed</p></em>
 </section>
 
 
